// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionBar should be expense by default 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      false,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 13,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F1F5FD",
          "borderRadius": 80,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "black",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#1B1D4D",
          "fontFamily": "MulishSemiBold",
          "fontSize": 14,
        }
      }
    >
      Adalyn Roth
    </Text>
    <Text
      style={
        {
          "color": "#4C4C60",
          "fontFamily": "MulishRegular",
          "fontSize": 12,
        }
      }
    >
      Money transfer
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "gap": 5,
          "marginLeft": "auto",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1B1D4D",
            "fontFamily": "MulishSemiBold",
            "fontSize": 14,
          },
          false,
        ]
      }
    >
      -
    </Text>
    <View>
      <Text
        style={
          [
            {
              "color": "#1B1D4D",
              "fontFamily": "MulishSemiBold",
              "fontSize": 14,
            },
            false,
          ]
        }
      >
        140.00
      </Text>
      <Text
        style={
          [
            {
              "color": "#4C4C60",
              "fontFamily": "MulishRegular",
              "fontSize": 12,
            },
            {
              "marginLeft": "auto",
            },
            {
              "display": "none",
            },
          ]
        }
      >
        undefined%
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransactionBar should have green color of balance and + sign when isExpense is false 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      false,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 13,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F1F5FD",
          "borderRadius": 80,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "black",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#1B1D4D",
          "fontFamily": "MulishSemiBold",
          "fontSize": 14,
        }
      }
    >
      Adalyn Roth
    </Text>
    <Text
      style={
        {
          "color": "#4C4C60",
          "fontFamily": "MulishRegular",
          "fontSize": 12,
        }
      }
    >
      Money transfer
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "gap": 5,
          "marginLeft": "auto",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1B1D4D",
            "fontFamily": "MulishSemiBold",
            "fontSize": 14,
          },
          {
            "color": "#3EB290",
          },
        ]
      }
    >
      +
    </Text>
    <View>
      <Text
        style={
          [
            {
              "color": "#1B1D4D",
              "fontFamily": "MulishSemiBold",
              "fontSize": 14,
            },
            {
              "color": "#3EB290",
            },
          ]
        }
      >
        140.00
      </Text>
      <Text
        style={
          [
            {
              "color": "#4C4C60",
              "fontFamily": "MulishRegular",
              "fontSize": 12,
            },
            {
              "marginLeft": "auto",
            },
            {
              "display": "none",
            },
          ]
        }
      >
        undefined%
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransactionBar should hide percent by default 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      false,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 13,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F1F5FD",
          "borderRadius": 80,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "black",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#1B1D4D",
          "fontFamily": "MulishSemiBold",
          "fontSize": 14,
        }
      }
    >
      Adalyn Roth
    </Text>
    <Text
      style={
        {
          "color": "#4C4C60",
          "fontFamily": "MulishRegular",
          "fontSize": 12,
        }
      }
    >
      Money transfer
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "gap": 5,
          "marginLeft": "auto",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1B1D4D",
            "fontFamily": "MulishSemiBold",
            "fontSize": 14,
          },
          false,
        ]
      }
    >
      -
    </Text>
    <View>
      <Text
        style={
          [
            {
              "color": "#1B1D4D",
              "fontFamily": "MulishSemiBold",
              "fontSize": 14,
            },
            false,
          ]
        }
      >
        140.00
      </Text>
      <Text
        style={
          [
            {
              "color": "#4C4C60",
              "fontFamily": "MulishRegular",
              "fontSize": 12,
            },
            {
              "marginLeft": "auto",
            },
            {
              "display": "none",
            },
          ]
        }
      >
        undefined%
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransactionBar should render correct text in title and subtitle 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      false,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 13,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F1F5FD",
          "borderRadius": 80,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "black",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#1B1D4D",
          "fontFamily": "MulishSemiBold",
          "fontSize": 14,
        }
      }
    >
      Adalyn Roth
    </Text>
    <Text
      style={
        {
          "color": "#4C4C60",
          "fontFamily": "MulishRegular",
          "fontSize": 12,
        }
      }
    >
      Money transfer
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "gap": 5,
          "marginLeft": "auto",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1B1D4D",
            "fontFamily": "MulishSemiBold",
            "fontSize": 14,
          },
          false,
        ]
      }
    >
      -
    </Text>
    <View>
      <Text
        style={
          [
            {
              "color": "#1B1D4D",
              "fontFamily": "MulishSemiBold",
              "fontSize": 14,
            },
            false,
          ]
        }
      >
        140.00
      </Text>
      <Text
        style={
          [
            {
              "color": "#4C4C60",
              "fontFamily": "MulishRegular",
              "fontSize": 12,
            },
            {
              "marginLeft": "auto",
            },
            {
              "display": "none",
            },
          ]
        }
      >
        undefined%
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransactionBar should render correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      false,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 13,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F1F5FD",
          "borderRadius": 80,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <Text />
  </View>
  <View>
    <Text
      style={
        {
          "color": "#1B1D4D",
          "fontFamily": "MulishSemiBold",
          "fontSize": 14,
        }
      }
    >
      Adalyn Roth
    </Text>
    <Text
      style={
        {
          "color": "#4C4C60",
          "fontFamily": "MulishRegular",
          "fontSize": 12,
        }
      }
    >
      Money transfer
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "gap": 5,
          "marginLeft": "auto",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1B1D4D",
            "fontFamily": "MulishSemiBold",
            "fontSize": 14,
          },
          false,
        ]
      }
    >
      -
    </Text>
    <View>
      <Text
        style={
          [
            {
              "color": "#1B1D4D",
              "fontFamily": "MulishSemiBold",
              "fontSize": 14,
            },
            false,
          ]
        }
      >
        140.00
      </Text>
      <Text
        style={
          [
            {
              "color": "#4C4C60",
              "fontFamily": "MulishRegular",
              "fontSize": 12,
            },
            {
              "marginLeft": "auto",
            },
            {
              "display": "none",
            },
          ]
        }
      >
        undefined%
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransactionBar should show percent when passed 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "borderRadius": 10,
        "height": "auto",
        "padding": 10,
        "width": "100%",
      },
      false,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 13,
      },
    ]
  }
  testID="universal-container"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F1F5FD",
          "borderRadius": 80,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        },
        false,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "black",
            "fontSize": 24,
          },
          undefined,
          {
            "fontFamily": "material",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#1B1D4D",
          "fontFamily": "MulishSemiBold",
          "fontSize": 14,
        }
      }
    >
      Adalyn Roth
    </Text>
    <Text
      style={
        {
          "color": "#4C4C60",
          "fontFamily": "MulishRegular",
          "fontSize": 12,
        }
      }
    >
      Money transfer
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "gap": 5,
          "marginLeft": "auto",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#1B1D4D",
            "fontFamily": "MulishSemiBold",
            "fontSize": 14,
          },
          false,
        ]
      }
    >
      -
    </Text>
    <View>
      <Text
        style={
          [
            {
              "color": "#1B1D4D",
              "fontFamily": "MulishSemiBold",
              "fontSize": 14,
            },
            false,
          ]
        }
      >
        140.00
      </Text>
      <Text
        style={
          [
            {
              "color": "#4C4C60",
              "fontFamily": "MulishRegular",
              "fontSize": 12,
            },
            {
              "marginLeft": "auto",
            },
            false,
          ]
        }
      >
        30%
      </Text>
    </View>
  </View>
</View>
`;
